# portalsq

./: .gitignore  bitbucket-pipelines.yml  configs.json  deploy.sh  importar_xp.py  kill.sh  manage.py  pyproject.toml  requirements.txt  sincronizar_lancamentos_especificos.py
JCOTSERVICE/: ArquivoEventosMaps.py  ConsultaMovimentoPeriodoV2Service.py  ListFundosService.py  ManClienteService.py  ManCotistaV2Service.py  Movimento.py  MovimentoResumisoService.py  PosicaoNotaHistorica.py  PosicaoRendimentoHistorico.py  PosicaodaNota.py  PosicaodoRendimento.py  ProcessamentoService.py  RelPosicaoFundoCotistaService.py  Resgate.py  Usuario.py  __init__.py
MAPS_MODULE/: batimentos.py  constants.py  login.py
STATIC/: app3.js
conciliacao/: apps.py  urls.py  views.py
conciliacao/app_control/: __init__.py
emissoresapp/: views.py
eventosapp/: CalculoDiaUtil.py  apps.py  buscar_emissores_o2.py  eventos_diarios.py  urls.py  views.py
jcothelper/: helper_class.py  models.py  views.py
listfundos/: listfundosmodule.py  views.py
portalescrituracao/: asgi.py  settings.py  urls.py  views.py  wsgi.py
sqdados/: views.py
src/: .env  .env.example  app.py  configs_exportacao.json  data.json  importar_xp.py  requirements.txt  volumes.csv
src/AmplisApi/: AmplisApi.py  __init__.py
src/JCOTSERVICE/: ConsultaMovimentoPeriodoV2Service.py  CotService.py  ManClienteService.py  ManCotistaV2Service.py  ManEnderecoService.py  MovimentoResumisoService.py  __init__.py  (+4 more)
xpapp/: apps.py  models.py  urls.py
zapemissoresApp/: ControllerZAP.py  ZAPRequest.py  apps.py  urls.py  views.py
(+250 files in other folders)
