[tool.poetry]
name = "portalescrituracao"
version = "0.1.0"
description = ""
authors = ["Thiago Conceição <thiago.conceicao@oliveiratrust.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
altgraph = "0.17.3"
asgiref = "3.6.0"
beautifulsoup4 = "4.11.2"
bizdays = "1.0.8"
bottle = "0.12.25"
bottle-websocket = "0.2.9"
bs4 = "0.0.1"
certifi = "2022.12.7"
cffi = "1.15.1"
charset-normalizer = "3.1.0"
dj-static = "0.0.6"
django = "4.1.7"
django-environ = "0.11.2"
django-extensions = "3.2.3"
dnspython = "2.3.0"
eel = "0.14.0"
et-xmlfile = "1.1.0"
future = "0.18.3"
gevent = "22.10.2"
gevent-websocket = "0.10.1"
greenlet = "2.0.2"
idna = "3.4"
lxml = "4.9.2"
mysqlclient = "2.1.1"
numpy = "1.24.2"
openpyxl = "3.1.2"
pandas = "1.5.3"
pefile = "2023.2.7"
pycparser = "2.21"
pymongo = "4.3.3"
pymysql = "1.0.2"
pyparsing = "3.0.9"
python-dateutil = "2.8.2"
python-decouple = "3.8"
python-dotenv = "1.0.0"
pytz = "2022.7.1"
pywin32-ctypes = "0.2.0"
requests = "2.28.2"
six = "1.16.0"
soupsieve = "2.4"
sqlalchemy = "2.0.5.post1"
sqlparse = "0.4.3"
static3 = "0.7.0"
typing-extensions = "4.5.0"
tzdata = "2022.7"
urllib3 = "1.26.15"
waitress = "2.1.2"
whichcraft = "0.6.1"
zope-event = "4.6"
zope-interface = "5.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
